# cra-scraper

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  release.yml
crascraper/: __init__.py  _version.py  exceptions.py
crascraper/analysis/: insights.py
crascraper/data/: schema.py
crascraper/parsers/: pe_parser.py
crascraper/scrapers/: ffiec.py
examples/: cra_ratings_demo.ipynb
tests/: conftest.py  test_analysis.py  test_parser.py  test_schema.py  test_scraper.py
